K1J-409: Implemented logic to support fake login through Testability API. Updated UserDetailsService to use LoginMethod to determine if user used fake or siths to login. Updated hibernate entities to use GenerationType.IDENTITY since AUTO generates _SEQ table. Added profile hsa-integration-intyg-proxy-service & testability. Removed dependency to legacy saml. Removed application-context-security.xml.